plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

// authentication
android {
    compileSdk 31


    defaultConfig {
        applicationId "com.baby_controller"
        minSdk 21
        targetSdk 31
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8

        
    }
    buildFeatures {
        viewBinding true
    }
    flavorDimensions 'defultConfig'
    productFlavors {
        defultConfig1 {
            dimension 'defultConfig'
            versionCode 1
            minSdk 21
            targetSdk 31
        }
    }
}

dependencies {
    implementation platform('com.google.firebase:firebase-bom:29.0.1')
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
    implementation 'com.google.firebase:firebase-auth:21.0.1'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
    implementation 'androidx.navigation:navigation-fragment:2.3.5'
    implementation 'androidx.navigation:navigation-ui:2.3.5'
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'androidx.work:work-runtime:2.7.1'
    implementation 'com.google.firebase:firebase-appindexing:20.0.0'
    testImplementation 'junit:junit:'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation platform('com.google.firebase:firebase-bom:29.0.2')
//    implementation 'com.google.firebase:firebase-admin:6.9.0'


    //Firebase
    implementation platform('com.google.firebase:firebase-bom:29.0.0')

    //Firebase database
    implementation 'com.google.firebase:firebase-database'

    //Firebase authentication
    implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
    implementation 'com.google.android.gms:play-services-auth:19.2.0'
    // in app messaging
    implementation 'com.google.firebase:firebase-inappmessaging-display:20.1.1'
    implementation 'androidx.multidex:multidex:2.0.1'

    //pobnub
    implementation group: 'com.pubnub', name: 'pubnub-gson', version: '5.2.3'


    //WorkManager
    def work_version = "2.7.1"
    implementation "androidx.work:work-runtime:$work_version"
}